frontend/tests/cases/negative/caseDischargeStyle.gr.output
Type checking failed: 
Type error: frontend/tests/cases/negative/caseDischargeStyle.gr:7:3:
Variable `y` is used as graded variable, but it is bound as a linear variable.

Type error: frontend/tests/cases/negative/caseDischargeStyle.gr:14:3:
Expected 1 uses, but instead there are 0 actual uses.